[package]
name = "heracles-master"
version = "0.4.0"
authors = ["Heracles Authors <heracles@cpssd.net>"]

[dependencies]
cerberus-proto = { path = "../proto" }
chrono = "0.4"
clap = "2.26"
config = "0.8.0"
failure = "0.1.1"
fern = "0.5.3"
futures = "0.1"
grpc = "0.2.1"
lapin-futures = "0.10.0"
lazy_static = "1.0"
log = "0.4"
protobuf = "1.4"
rayon = "1.0.0"
tokio-core = "0.1"
uuid = { version = "0.6", features = ["v4"] }
