[package]
name = "worker"
version = "0.3.1"
authors = ["Cerberus Authors <cerberus@cpssd.net>"]

[dependencies]
bson = "0.10"
clap = "~2.26"
cerberus-proto = { path = "../legacy-proto" }
protobuf = "1.4.1"
error-chain = "0.11.0"
failure = "0.1.1"
futures = "0.1"
grpc = "0.2.1"
heracles-proto = { path = "../proto" }
lapin-futures = "0.10.0"
log = "0.3.8"
libc = "0.2.33"
local-ip = "0.1"
procinfo = "0.4.2"
tls-api = "0.1.10"
tokio-core = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
util = { path = "../util" }
uuid = { version = "0.5", features = ["v4"] }

[dev-dependencies]
mocktopus = "0.1.0"
